tests/semantic/assign_err6.expected

Semantic Error [line 7]: value: "sc1_test"
	Invalid l-value type: Expected type(s) 'Variable' and 'Integer'; found 'String' instead.
