tests/semantic/assign_err6.mtp
(*Try an assignment to a constant int*)
const test := 'error';
var a, b : integer;

begin

	test := a + b
end.